force-app/main/default/objects/Mapping__c/fields/Add_Occurance_Day__c.field-meta.xml
<CustomField>
    <fullName>Add_Occurance_Day__c</fullName>
    <label>Add Occurance Day</label>
    <length>50</length>
    <type>Text</type>
</CustomField>