force-app/main/default/objects/Mapping__c/fields/AddName__c.field-meta.xml
<CustomField>
    <fullName>AddName__c</fullName>
    <label>AddName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>