force-app/main/default/objects/Mapping__c/fields/UserId__c.field-meta.xml
<CustomField>
    <fullName>UserId__c</fullName>
    <label>UserId</label>
    <referenceTo>UserRegistration__c</referenceTo>
    <relationshipLabel>Mappings</relationshipLabel>
    <relationshipName>Mappings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>